[swiftboot-auth] Emit SignIn and SignOut event when user signin and signout. [swiftboot-data] added new SwiftIdGenerator as the default ID generator for entities. Support timezone [swiftboot-web] Supports timezone automatically with TimeZoneMapper and utils classes.